<resources>
    <string name="app_name">Pokemon</string>
    <string name="crear">Crear</string>
    <string name="crear_pokemon">Crear Pokemon</string>
    <string name="nombre">Nombre</string>
    <string name="tipo">Tipo</string>
    <string name="nombre_del_ataque">Nombre del Ataque</string>
    <string name="descripcion">Descripcion</string>
    <string name="debilidad">Debilidad</string>

    <string name="ataque">Ataque:</string>
    <string name="pokemon">Pokemon:</string>
    <string name="todo">TODO</string>
    <string name="borrar_carta">BORRAR CARTA</string>
    <string name="item_cartas">item_cartas</string>
    <string name="actualizar_carta">Actualizar Carta</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="lista_de_cartas">Lista de Cartas</string>
    <string name="button">Button</string>
    <string name="id">id</string>

</resources>