<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_monstrar"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/titulo"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_mostrarPokemon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txt_monstarAtaque"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ataque" />

                <TextView
                    android:id="@+id/txt_mostrarDebilidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/debilidad" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
